--- a/molly/templates/static/about.html
+++ b/molly/templates/static/about.html
@@ -19,7 +19,7 @@
     <h2 style="color:#002147;">Cycle routing</h2>
     <div><p>
 	Cycle routing is provided by <a href="http://www.cyclestreets.net">CycleStreets</a> 
-	using <a href="{% url %}">OpenStreetMap data</a>, which is licensed under
+	using <a href="http://www.openstreetmap.org/">OpenStreetMap data</a>, which is licensed under
 	the Creative Commons Attribution-Share Alike (CC-BY-SA) 2.0 license.
     </p></div>
 </div>
