--- a/molly/templates/static/about.html
+++ b/molly/templates/static/about.html
@@ -2,7 +2,9 @@
 <div class="section">
     <h2>{% trans "About this site" %}</h2>
     <div class="note"><div class="bubble pad-10">
+    {% block siteabout %}
     {% trans "This is a Molly Project Demo site." %}
+    {% endblock %}
     </div></div>
 </div>
 
