Change name from bus routes, as this can appear on more than just bus pages

--- a/molly/apps/transport/templates/transport/public_transport.html
+++ b/molly/apps/transport/templates/transport/public_transport.html
@@ -116,7 +116,7 @@
 
 <ul class="link-list stand-alone">
     <li><a href="{% url transport:routes pageslug %}">
-        {% trans 'View all bus routes' %}
+        {% trans 'View all routes' %}
     </a></li>
 </ul>
 
