--- a/molly/apps/podcasts/templates/podcasts/index.html
+++ b/molly/apps/podcasts/templates/podcasts/index.html
@@ -48,7 +48,7 @@
 
 {% if categories %}
 	<div class="section" >
-	{% block listdef %}
+	{% block list_def %}
 	  <div class="header">
 		<h2>{% trans "By category" %}</h2>
 	  </div>
