--- a/molly/apps/transport/templates/transport/base.html
+++ b/molly/apps/transport/templates/transport/base.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% block transport-links %}
+{% block transport_links %}
 
 {% ifnotequal style_group "dumb" %}
     <ul id="transport-links">
