correcting double slash problem when importing leaflet files

--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -82,8 +82,8 @@
     
     {% if use_slippy_maps %}
     {# These devices get slippy maps #}
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/leaflet/leaflet.css"/>
-        <script type="text/javascript" src="{{ STATIC_URL }}/leaflet/leaflet.js"></script>
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}leaflet/leaflet.css"/>
+        <script type="text/javascript" src="{{ STATIC_URL }}leaflet/leaflet.js"></script>
     {% endif %} 
     
     {# Include ALL javascript (ignore filename) #}
