--- a/molly/url_shortener/templates/url_shortener/index.html
+++ b/molly/url_shortener/templates/url_shortener/index.html
@@ -22,7 +22,7 @@
 <p>{% trans "Click on the links below to share this page" %}</p>
 
 <ul id="transport-links">
-    <li class="transport-link"><a href="http://www.facebook.com/share.php?u={{ url }}"><img src="{{ STATIC_URL }}site/images/icons/facebook2.png" border="0"/></a></li>
+    <li class="transport-link"><a href="http://www.facebook.com/sharer/sharer.php?u={{ url }}"><img src="{{ STATIC_URL }}site/images/icons/facebook2.png" border="0"/></a></li>
     <li class="transport-link"><a href="http://twitter.com/home?status={% if page_title %}{{ page_title }} on {{ site_name }}{% endif %} {{ url }}"><img src="{{ STATIC_URL }}site/images/icons/twitter2.png" border="0"/></a></li>
     <li class="transport-link"><a href="mailto:?subject={% if page_title %}{{ page_title }} From {{ site_name }}{% endif %}&body={% if page_title %}{{ page_title }} From site_name{% endif %} {{ url }}"><img src="{{ STATIC_URL }}site/images/icons/email2.png" border="0"/></a></li>
 </ul>
