--- a/molly/apps/feeds/templates/feeds/events/item_detail.html
+++ b/molly/apps/feeds/templates/feeds/events/item_detail.html
@@ -22,7 +22,15 @@
     <div class="article"><div class="bubble pad-5">
         {{ description|safe }}
         <br />
-        
+
+        {% if item.dt_start %}
+        {% trans "Start:" %} {{item.dt_start|date:"j M Y \a\t H:m"}}<br />
+        {% endif %}
+
+        {% if item.dt_end %}
+        {% trans "End:" %} {{item.dt_end|date:"j M Y \a\t H:m"}}<br />
+        {% endif %}
+
         <small><em>
             {{ item.last_modified_local|date:"j M Y \a\t H:m" }}<br />
 			{# Significant whitespace on line below #}
