--- a/molly/apps/feeds/templates/feeds/events/item_detail.html
+++ b/molly/apps/feeds/templates/feeds/events/item_detail.html
@@ -24,15 +24,15 @@
         <br />
 
         {% if item.dt_start %}
-        {% trans "Start:" %} {{item.dt_start|date:"j M Y \a\t H:m"}}<br />
+        {% trans "Start:" %} {{item.dt_start|date:"j M Y \a\t H:i"}}<br />
         {% endif %}
 
         {% if item.dt_end %}
-        {% trans "End:" %} {{item.dt_end|date:"j M Y \a\t H:m"}}<br />
+        {% trans "End:" %} {{item.dt_end|date:"j M Y \a\t H:i"}}<br />
         {% endif %}
 
         <small><em>
-            {{ item.last_modified_local|date:"j M Y \a\t H:m" }}<br />
+            {{ item.last_modified_local|date:"j M Y \a\t H:i" }}<br />
 			{# Significant whitespace on line below #}
             {% trans "Link:" %} <a href="{{ item.link }}" title="{{ item.title }}">{{ item.link }}</a>
         </em></small>
