--- a/molly/auth/templates/auth/clear_session.html
+++ b/molly/auth/templates/auth/clear_session.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form method="post" action=".">
+<form method="post" action="">
   {% csrf_token %}
 
 <div class="section">
