--- a/molly/apps/feeds/templates/feeds/events/item_list.html
+++ b/molly/apps/feeds/templates/feeds/events/item_list.html
@@ -24,7 +24,11 @@
                 {{ item.title }}<br />
                 <small><em>
                 {% if item.dt_start %}
-                    {% trans "Starts:" %} {{item.dt_start|date:"j M Y \a\t H:i"}}
+                    {% if item.dt_start_local|this_year %}
+                        {% trans "Starts:" %} {{item.dt_starti_local|date:"l j M \a\t H:i"}}
+                    {% else %}
+                        {% trans "Starts:" %} {{item.dt_start_local|date:"j M Y \a\t H:i"}}
+                    {% endif %}
                 {% else %}
                     {% if not item.last_modified_local|this_year %}
                         {{ item.last_modified_local|date:"j M Y" }}
