event detail description now has clickable urls

--- a/molly/apps/feeds/templates/feeds/events/item_detail.html
+++ b/molly/apps/feeds/templates/feeds/events/item_detail.html
@@ -21,7 +21,7 @@
     
     <div class="article"><div class="bubble pad-5">
         {% if description %}   
-        {{ description|safe }}
+        {{ description|safe|urlize }}
         <br /><br />
         {% endif %}
 
