--- a/molly/apps/feeds/templates/feeds/events/item_detail.html
+++ b/molly/apps/feeds/templates/feeds/events/item_detail.html
@@ -26,8 +26,8 @@
         {% endif %}
 
         {% if item.dt_start %}
-        {% trans "Starts:" %} 
-            {% if item.dt_start.hour != 0 and item.dt_start.minute != 0 %}
+        {% trans "Starts:" %}
+            {% if item.dt_start|date:"H:i" != "00:00" %}
             {{item.dt_start|date:"l j M Y \a\t H:i"}}<br />
             {% else %}
             {{item.dt_start|date:"l j M Y"}}<br />
@@ -36,7 +36,7 @@
 
         {% if item.dt_end %}
         {% trans "Ends:" %} 
-            {% if item.dt_end.hour != 0 and item.dt_end.minute != 0 %}
+            {% if item.dt_end|date:"H:i" != "00:00" %}
             {{item.dt_end|date:"l j M Y \a\t H:i"}}<br />
             {% else %}
             {{item.dt_end|date:"l j M Y"}}<br />
